Thu Dec  2 07:57:16 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_ctl): [ruby-dev:25019]

Wed Dec  1 06:13:00 2004  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf.c: add constant NKF::VERSION

	* ext/nkf/nkf.c(guess): this becomes an alias of guess2

	* ext/nkf/test.rb: add --no-cp932

	* ext/nkf/nkf-utf8/nkf.c: original nkf2 revision 1.47

Wed Dec  1 02:21:02 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* signal.c (sighandler): call handler immediately only for default
	  handlers.  [ruby-dev:25003]

Tue Nov 30 23:49:12 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (pipe_open): errno should be preserved for rb_sys_fail() when
	  fork failed.

Tue Nov 30 16:18:50 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (io_fread): need not to null terminate.  [ruby-dev:24998]

	* eval.c (rb_eval): should check previous frame for ZSUPER.

	* io.c (read_all): remove unnecessary rb_str_resize().
	  [ruby-dev:24996]

	* io.c (io_readpartial): ditto.

	* io.c (io_read): ditto.

Tue Nov 30 14:58:33 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* instruby.rb (install): add arguments explicitly to "super".

Tue Nov 30 00:49:08 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (PUSH_FRAME): flags should have been initialized.

	* eval.c (rb_eval): [ruby-core:03856]

	* io.c (rb_io_sysread): use temporary lock.  [ruby-dev:24992]

Tue Nov 30 00:12:57 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* regparse.c: now handles many alternatives (over 500000)
	in regexp. [ruby-dev:24773]

Mon Nov 29 16:06:04 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_write): insufficiently filled string
	  being extended when overwriting.  [ruby-core:03836]

Mon Nov 29 15:59:05 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/ostruct.rb (OpenStruct::method_missing): check method
	  duplication for -d.

	* lib/ostruct.rb (OpenStruct::initialize): ditto.
