@@ -1,3 +1,9 @@
+Thu Dec  2 09:30:58 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (thread_mark): mark thread group.  [ruby-dev:25020]
+
+	* eval.c (thgroup_add): check whether the argument is really a Thread.
+
 Thu Dec  2 07:57:16 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* io.c (rb_io_ctl): [ruby-dev:25019]
